--- a/lab.html
+++ b/lab.html
@@ -60,7 +60,7 @@
                 </tr>
                 <tr style="display: flex; justify-content: center; margin:0 60px 35px 60px">
                     <td align="start" valign="start" style="padding-bottom: 10px;">
-                        <p style="color:#181C32; font-size: 18px; font-weight: 600; margin-bottom:13px">What’s next?</p>
+                        <p style="color:#181C32; font-size: 18px; font-weight: 600; margin-bottom:13px">Whats next?</p>
                         <!--begin::Wrapper-->
                         <div style="background: #F9F9F9; border-radius: 12px; padding:35px 30px">
                             <!--begin::Item-->
@@ -172,9 +172,9 @@
                 <tr>
                     <td align="center" valign="center"
                         style="font-size: 13px; text-align:center; padding: 0 10px 10px 10px; font-weight: 500; color: #A1A5B7; font-family:Arial,Helvetica,sans-serif">
-                        <p style="color:#181C32; font-size: 16px; font-weight: 600; margin-bottom:9px">It’s all about
+                        <p style="color:#181C32; font-size: 16px; font-weight: 600; margin-bottom:9px">Its all about
                             customers!</p>
-                        <p style="margin-bottom:2px">Call our customer care number: +254 716 912 002</p>
+                        <p style="margin-bottom:2px">Call our customer care number: +254 712 345 678</p>
                         <p style="margin-bottom:4px">You may reach us at
                             <a href="https://techkira.net/" rel="noopener" target="_blank"
                                 style="font-weight: 600">support@techkira.net</a>.
