--- a/lab.html
+++ b/lab.html
@@ -24,8 +24,8 @@
                         <div style="text-align:center; margin:0 15px 34px 15px">
                             <!--begin:Logo-->
                             <div style="margin-bottom: 10px">
-                                <a href="https://techkira.net/" rel="noopener" target="_blank">
-                                    <img alt="Logo" src="https://techkira.net/assets/media/logos/logo-3.png"
+                                <a href="https://kakamega.techkira.net/" rel="noopener" target="_blank">
+                                    <img alt="Logo" src="https://kakamega.techkira.net/assets/media/logos/logo-3.png"
                                         style="height: 100px" />
                                 </a>
                             </div>
@@ -33,7 +33,7 @@
                             <!--begin:Media-->
                             <div style="margin-bottom: 15px">
                                 <img alt="Logo"
-                                    src="https://techkira.net/mail_media/media/email/icon-positive-vote-1.png" />
+                                    src="https://kakamega.techkira.net/mail_media/media/email/icon-positive-vote-1.png" />
                             </div>
                             <!--end:Media-->
                             <!--begin:Text-->
@@ -49,7 +49,7 @@
                             </div>
                             <!--end:Text-->
                             <!--begin:Action-->
-                            <a href="https://techkira.net/auth/activate.php?code=' . $code . '&user=' . $userid . '"
+                            <a href="https://kakamega.techkira.net/auth/activate.php?code=' . $code . '&user=' . $userid . '"
                                 target="_blank"
                                 style="background-color:#4B9539; border-radius:6px;display:inline-block; padding:11px 19px; color: #FFFFFF; font-size: 14px; font-weight:500;">Activate
                                 Account</a>
@@ -69,7 +69,7 @@
                                 <div
                                     style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
                                     <img alt="Logo"
-                                        src="https://techkira.net/mail_media/media/email/icon-polygon.png" />
+                                        src="https://kakamega.techkira.net/mail_media/media/email/icon-polygon.png" />
                                     <span
                                         style="position: absolute; color:#4B9539; font-size: 16px; font-weight: 600;">1</span>
                                 </div>
@@ -104,7 +104,7 @@
                                 <div
                                     style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
                                     <img alt="Logo"
-                                        src="https://techkira.net/mail_media/media/email/icon-polygon.png" />
+                                        src="https://kakamega.techkira.net/mail_media/media/email/icon-polygon.png" />
                                     <span
                                         style="position: absolute; color:#4B9539; font-size: 16px; font-weight: 600;">2</span>
                                 </div>
@@ -139,7 +139,7 @@
                                 <div
                                     style="display: flex; justify-content: center; align-items: center; width:40px; height:40px; margin-right:13px">
                                     <img alt="Logo"
-                                        src="https://techkira.net/mail_media/media/email/icon-polygon.png" />
+                                        src="https://kakamega.techkira.net/mail_media/media/email/icon-polygon.png" />
                                     <span
                                         style="position: absolute; color:#4B9539; font-size: 16px; font-weight: 600;">3</span>
                                 </div>
@@ -176,8 +176,8 @@
                             customers!</p>
                         <p style="margin-bottom:2px">Call our customer care number: +254 712 345 678</p>
                         <p style="margin-bottom:4px">You may reach us at
-                            <a href="https://techkira.net/" rel="noopener" target="_blank"
-                                style="font-weight: 600">support@techkira.net</a>.
+                            <a href="https://kakamega.techkira.net/" rel="noopener" target="_blank"
+                                style="font-weight: 600">support@kakamega.techkira.net</a>.
                         </p>
                         <p>We serve Mon-Fri, 9AM-18AM</p>
                     </td>
@@ -185,16 +185,16 @@
                 <tr>
                     <td align="center" valign="center" style="text-align:center; padding-bottom: 20px;">
                         <a href="#" style="margin-right:10px">
-                            <img alt="Logo" src="https://techkira.net/mail_media/media/email/icon-linkedin.png" />
+                            <img alt="Logo" src="https://kakamega.techkira.net/mail_media/media/email/icon-linkedin.png" />
                         </a>
                         <a href="#" style="margin-right:10px">
-                            <img alt="Logo" src="https://techkira.net/mail_media/media/email/icon-dribbble.png" />
+                            <img alt="Logo" src="https://kakamega.techkira.net/mail_media/media/email/icon-dribbble.png" />
                         </a>
                         <a href="#" style="margin-right:10px">
-                            <img alt="Logo" src="https://techkira.net/mail_media/media/email/icon-facebook.png" />
+                            <img alt="Logo" src="https://kakamega.techkira.net/mail_media/media/email/icon-facebook.png" />
                         </a>
                         <a href="#">
-                            <img alt="Logo" src="https://techkira.net/mail_media/media/email/icon-twitter.png" />
+                            <img alt="Logo" src="https://kakamega.techkira.net/mail_media/media/email/icon-twitter.png" />
                         </a>
                     </td>
                 </tr>
@@ -202,7 +202,7 @@
                     <td align="center" valign="center"
                         style="font-size: 13px; padding:0 15px; text-align:center; font-weight: 500; color: #A1A5B7;font-family:Arial,Helvetica,sans-serif">
                         <p>&copy; Copyright KCTS.
-                            <a href="https://techkira.net/" rel="noopener" target="_blank"
+                            <a href="https://kakamega.techkira.net/" rel="noopener" target="_blank"
                                 style="font-weight: 600;font-family:Arial,Helvetica,sans-serif">Unsubscribe</a>&nbsp;
                             from newsletter.
                         </p>
